# iterDiscordBot

./: .env.example  .gitignore  README.md  bot.py  config.py  infobot.py  main.py  notices.json  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: docker.yml
cogs/: events.py
iter_bot/core/: __init__.py  base_cog.py  bot.py
iter_bot/features/help/: cog.py
iter_bot/features/notice_board/: cog.py  noticescrapper.py
iter_bot/features/notice_board/data/: seen_notices.json
iter_bot/features/ping/: cog.py
iter_bot/features/shutdown/: cog.py
iter_bot/shared/: __init__.py
iter_bot/shared/utils/: embeds.py
